Hands-on/1.2 Docker & Kubernetes/k8s/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: node-app-deployment
  namespace: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      name: node-app-dep-pod
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: docker-username/react-app:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
