Hands-on/1.2 Docker & Kubernetes/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
  namespace: node-app
spec:
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
